# esp32-hello

./: build.sh  docker-compose.yaml
app/: Cargo.toml
app/src/: main.rs
esp-idf-hal/src/: i2c.rs  lib.rs
esp32-hal/src/: i2c.rs
